<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"
        translatable="false"          >   50 Pull ups         </string>
    <string name="test_label"         >   Test initial        </string>
    <string name="exercices_label"    >   Exercices           </string>
    <string name="select_level_label" >   Choix du niveau     </string>
    <!-- ActiviteAccueil Activity String -->
    <string name="btn_entrainement"   >   Entraînement        </string>
    <string name="total"              >   TOTAL               </string>
    <string name="stats"
        translatable="false"          >   Stats               </string>
    <string name="exercices"          >   Exercices           </string>
    <string name="lastDay"            >
        Bravo, vous avez terminé le programme d\'entraînement. Vous devriez être capable de faire 50 tractions   </string>
    <string name="reinitialisation"   >   Réinitialisation terminée                                   </string>
    <!-- ActiviteAvantEntrainement Activity String -->
    <string name="btn_demarrer"       >   Démarrer            </string>
    <string name="level_select"       >   Choix du Niveau     </string>
    <string name="same_day"           >   Répéter le jour     </string>
    <string name="next_day"           >   Jour suivant        </string>
    <!-- ActiviteEntrainement Activity String -->
    <string name="negatives"          >   négatives</string>
    <string name="complet">Completé</string>
    <string name="termine">Terminé</string>
    <!-- Select Level Activity String -->
    <string name="validate">Valider</string>
    <string name="previous">Précédent</string>
    <string name="next">Suivant</string>
    <string name="no_level_selected">Aucun Jour choisi</string>
    <string name="level">Niveau</string>
    <string name="choose_day">Choisissez le jour d\'entrâinement</string>
    <!-- ActiviteCompteARebours Activity String -->
    <string name="btn_passer">Passer</string>
    <!-- ActiviteStatistiques Activity String -->
    <string name="stats_label">Statistiques</string>
    <string name="stats_by_level">Statistiques par niveau</string>
    <string name="stats_by_day">Statistiques par jours</string>
    <!-- Alarm Activity -->
    <string name="Lundi">Lundi</string>
    <string name="Mardi">Mardi</string>
    <string name="Mercredi">Mercredi</string>
    <string name="Jeudi">Jeudi</string>
    <string name="Vendredi">Vendredi</string>
    <string name="Samedi">Samedi</string>
    <string name="Dimanche">Dimanche</string>
    <string name="monday"
        translatable="false">lundi</string>
    <string name="thuesday"
        translatable="false">mardi</string>
    <string name="wednesday"
        translatable="false">mercredi</string>
    <string name="thursday"
        translatable="false">jeudi</string>
    <string name="friday"
        translatable="false">vendredi</string>
    <string name="saturday"
        translatable="false">samedi</string>
    <string name="sunday"
        translatable="false">dimanche</string>
    <string name="chooseHour"                                       >Choisissez l\'heure</string>
    <string name="conseil">Conseil</string>
    <string name="messageRepos">Prenez au moins un jour de repos avant de vous entrainez à nouveau          </string>
    <string name="testMessage"                                      >
        Vous allez effectué un test qui nous permettra de définir votre niveau.
        Echauffez-vous pendant 3 à 5 minutes puis faites le maximum de tracation possible en une fois.
        Si vous n\'êtes pas capable de faire une traction entrez \"0\"                                      </string>
    <string name="testRunning"
        translatable="false">testRunning</string>
    <string name="testRunningMessage"
        translatable="false">testRunningMessage</string>
    <string name="testQuitter">Plus Tard</string>
    <string name="testAller">C\'est Parti</string>
    <string name="annuler">Annuler</string>
    <string name="pressAgain">Appuyez à nouveau pour quitter</string>
    <string name="str_backToMain">Valider pour revenir en arrière. Votre progression sera perdue</string>
    <string name="lost_progression">Votre progression a été perdue</string>
    <string name="negativeFalse">Prenez le temps de vous échauffer et effectuez vos tractions du mieux possible. Allez dans la séction \"Exercices\" en cas de doutes.</string>
    <string name="negativeTrue">Attention!!! \nVous devrez faire des tractions \"négatives\". La section Exercices peut vous aidez.</string>
    <string name="selectDay">Choisissez un jour</string>
    <string name="str_backtoTraining">Appuyez une seconde fois pour continuer l\'entraînement</string>
    <string name="str_bravo">Bravo!\nVous avez terminé votre entraînement. Reposez-vous avant de débuter le suivant </string>
    <string name="str_entrainement_termine">Entraînement du jour terminé</string>
    <string name="levelTest">Test de Niveau</string>
    <string name="nbr_tractions">Nombre de tractions</string>
    <string name="ad_unit_id"
        translatable="false">ca-app-pub-7627377932708849/5522488616</string>
    <string name="difficulty">Difficulté:</string>
    <string name="play_video">Voir la vidéo pour plus d\'info</string>
    <string name="error_edtText_empty">Champ traction vide</string>
    <string name="error_edtText_length"
        translatable="false">Min 0 - Max 50</string>
    <!-- Menu -->
    <string name="alarme">Alarme</string>
    <string name="about">À Propos</string>
    <string name="rest">Récupération</string>
    <string name="vote">Noter l\'app</string>
    <string name="deleteData">Réinitialiser</string>
    <string name="share">Partagez</string>
    <!-- Notification -->
    <string name="notification_title">Entraînement du jour</string>
    <string name="notification_content">C\'est l\'heure de l\'entraînement</string>
    <string name="splashscreen"
        translatable="false">splashscreen</string>
    <string name="displayLevelFormatComa">NIVEAU %1$.1f"</string>
    <string name="displayLevelFormat">NIVEAU %1$.0f"</string>
    <string name="TitleLevel">"NIVEAU %1$.1f"</string>
    <string name="displayDayActiviteChoixDuNiveau">"Jour %1$d"</string>
    <string name="end_training">TERMINÉ</string>
    <string name="pull_up">tractions</string>
    <string name="congratulations">Bravo!!</string>
    <string name="niveauSelectionne">Niveau %.1f selectionné</string>
    <string name="recordDeTraction">"Votre record est de %1$d tractions"</string>
    <string name="share_using">Partager</string>
    <string name="seriedujour">Séries du jour</string>
    <string name="recuperationStatistiques">Récupération des statistiques</string>
    <string name="statsTotalDeTractions">Total de traction</string>
    <string name="erreurDansAffichageStatistiques">Erreur dans l\'affichage des Stats</string>
    <string name="shareText">Hey, essaye la meilleur app pour augmenter tes tractions - http://play.google.com/store/apps/details?id=com.pullups.android</string>
    <string name="shareSubject">Partager</string>
    <string name="error_player">Une erreur est survenue lors de la lecture de la vidéo  (%1$s)</string>
    <string name="reminderSet">Rappel ajouté avec succès!</string>
    <string name="reminderNotSet">Erreur lors de l\'ajout du rappel</string>
    <string name="heure_alarme">10:00</string>
    <string name="dialogInfo">\n\nVersion de l\'application: %1$s \nNom du package: %2$s\nEmail: pullups50@gmail.com\n</string>
    <string name="maj_negatives">Négatives</string>
    <string name="muscles_chin_ups">Biceps, Rhomboïdes</string>
    <string name="muscles_negatives">Biceps, Trapèze</string>
    <string name="maj_chin_ups">Traction pronation</string>
    <string name="maj_wide_pull_up">Tractions prise large</string>
    <string name="maj_military_pullup">Traction militaire</string>
    <string name="muscle_wide">Bicieps, Grand dorsal</string>
    <string name="muscles_military">Epaules, Trapèze</string>
    <string name="information">50 tractions est une application vous permettant d\'atteindre 50 tractions après plusieurs entrainements. N\'oubliez pas de vous échauffer avant chaque entraînement Merci de prendre contact avec le développeur de l\'application en cas de bug ou erreur dans l\'application afin que cela puisse être corrigé au plus vite.</string>
    <string name="niveau_debutant">Débutant</string>
    <string name="niveau_standard">Standard</string>
    <string name="niveau_avance">Avancé</string>
    <string name="niveau_intermediaire">Intermédiaire</string>
    <string name="tappx_key" translatable="false">/120940746/Pub-9623-Android-3570</string>
    <string name="reset_confirm">Attention êtes vous sûr de vouloir remettre à zéro la base de données?</string>
    <string name="succesfullreset">Le programme a bien été réinitialisé </string>
    <string name="google_app_id" translatable="false">uplifted-cider-123421</string>
    <string name="str_BackTitle">Arrêter l\'entraînement</string>
    <string name="str_LeaveApp">Quitter l\'application?</string>
    <string name="str_confimLeaveApp">Êtes-vous sur de vouloir quitter 50 Tractions?</string>
</resources>
